--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 checkponts_pt/*.pt filter=lfs diff=lfs merge=lfs -text
  filter=lfs diff=lfs merge=lfs -text
 checkpoints_pt/*.pt filter=lfs diff=lfs merge=lfs -text
+checkpoints_pt/best_model.pt filter=lfs diff=lfs merge=lfs -text
